--- a/eduland-master/index.html
+++ b/eduland-master/index.html
@@ -59,7 +59,7 @@
         <ul class="navbar-list">
 
           <li>
-            <a href="#" class="navbar-link">Home</a>
+            <a href="https://ias-ejust.vercel.app/" class="navbar-link">Home</a>
           </li>
 
           <!-- <li>
@@ -174,6 +174,8 @@
 
       <section class="departments">
         <div class="container">
+
+          <img src="./assets/images/departmets-vector.svg" alt="Vector line art" class="vector-line">
 
           <h2 class="h2 departments-title">IAS-sponsored events </h2>
 
@@ -379,6 +381,8 @@
       <section class="departments">
         <div class="container">
 
+          <img src="./assets/images/departmets-vector.svg" alt="Vector line art" class="vector-line">
+
           <h2 class="h2 departments-title">IAS-Flagship Publications  </h2>
 
           
@@ -500,6 +504,8 @@
 
             <h2 class="h2 cta-title">
               <span>Create Free Account & Get Register</span>
+
+              <img src="./assets/images/cta-vector.svg" alt="Vector arrow art" class="vector-line">
             </h2>
 
             <a href="https://www.ieee.org/membership-catalog/productdetail/showProductDetailPage.html?product=MEMIA034"><button class="btn btn-primary">Register Now</button></a>
