--- a/eduland-master/index.html
+++ b/eduland-master/index.html
@@ -503,7 +503,7 @@
           <div class="title-wrapper">
 
             <h2 class="h2 cta-title">
-              <span>Create Your Account & Get Latest Opportunities</span>
+              <span>Join US and be a Valuable Member</span>
 
               <img src="./assets/images/cta-vector.svg" alt="Vector arrow art" class="vector-line">
             </h2>
