--- a/eduland-master/index.html
+++ b/eduland-master/index.html
@@ -94,6 +94,10 @@
   <main>
     <article>
 
+      <script>
+        (function(){if(!window.chatbase||window.chatbase("getState")!=="initialized"){window.chatbase=(...arguments)=>{if(!window.chatbase.q){window.chatbase.q=[]}window.chatbase.q.push(arguments)};window.chatbase=new Proxy(window.chatbase,{get(target,prop){if(prop==="q"){return target.q}return(...args)=>target(prop,...args)}})}const onLoad=function(){const script=document.createElement("script");script.src="https://www.chatbase.co/embed.min.js";script.id="wAbiBLlA3Io0bC3DJ3O8u";script.domain="www.chatbase.co";document.body.appendChild(script)};if(document.readyState==="complete"){onLoad()}else{window.addEventListener("load",onLoad)}})();
+      </script>
+        
       <!-- 
         - #HERO
       -->
@@ -174,6 +178,7 @@
 
       <section class="departments">
         <div class="container">
+
           <h2 class="h2 departments-title">IAS-sponsored events </h2>
 
           
@@ -497,7 +502,8 @@
           <div class="title-wrapper">
 
             <h2 class="h2 cta-title">
-              <span>Join US and be a Valuable Member</span>
+              <span>Create Free Account & Get Register</span>
+
             </h2>
 
             <a href="https://www.ieee.org/membership-catalog/productdetail/showProductDetailPage.html?product=MEMIA034"><button class="btn btn-primary">Register Now</button></a>
