--- a/SIS/index.html
+++ b/SIS/index.html
@@ -39,7 +39,10 @@
 
     <!-- Main Content -->
     <main class="l-main">
-
+        <script>
+            (function(){if(!window.chatbase||window.chatbase("getState")!=="initialized"){window.chatbase=(...arguments)=>{if(!window.chatbase.q){window.chatbase.q=[]}window.chatbase.q.push(arguments)};window.chatbase=new Proxy(window.chatbase,{get(target,prop){if(prop==="q"){return target.q}return(...args)=>target(prop,...args)}})}const onLoad=function(){const script=document.createElement("script");script.src="https://www.chatbase.co/embed.min.js";script.id="wAbiBLlA3Io0bC3DJ3O8u";script.domain="www.chatbase.co";document.body.appendChild(script)};if(document.readyState==="complete"){onLoad()}else{window.addEventListener("load",onLoad)}})();
+        </script>
+            
             <section class="intro">
                 <p>The IEEE Industry Applications Society (IAS) is a key resource for students pursuing careers in
                     electrical, electronics, and industrial engineering.</p>
