--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
 
         <main class="l-main">
             <!--========== HOME ==========-->
+            <script>
+                (function(){if(!window.chatbase||window.chatbase("getState")!=="initialized"){window.chatbase=(...arguments)=>{if(!window.chatbase.q){window.chatbase.q=[]}window.chatbase.q.push(arguments)};window.chatbase=new Proxy(window.chatbase,{get(target,prop){if(prop==="q"){return target.q}return(...args)=>target(prop,...args)}})}const onLoad=function(){const script=document.createElement("script");script.src="https://www.chatbase.co/embed.min.js";script.id="wAbiBLlA3Io0bC3DJ3O8u";script.domain="www.chatbase.co";document.body.appendChild(script)};if(document.readyState==="complete"){onLoad()}else{window.addEventListener("load",onLoad)}})();
+            </script>
+                
             <section class="home" id="home">
                 <div class="home__container bd-container bd-grid">
                     <div class="home__data">
