--- a/eduland-master/index.html
+++ b/eduland-master/index.html
@@ -502,7 +502,7 @@
           <div class="title-wrapper">
 
             <h2 class="h2 cta-title">
-              <span>Create Free Account & Get Register</span>
+              <span>Join US & bB Valuable Member </span>
 
             </h2>
 
