--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="eduland-master/index.html">IAS Membership</a></li>
                                 <li><a href="SIS/index.html">Sister Societies</a></li>
-                                <li><a href="#service3">Topic 3</a></li>
+                                <li><a href="Courses/Courses.html">IAS Courses</a></li>
                             </ul>
                         </li>
                         <li class="nav__item"><a href="#menu" class="nav__link">Menu</a></li>
