--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <ul class="nav__list">
                         <li class="nav__item"><a href="#home" class="nav__link active-link">Home</a></li>
                         <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
+                        <li class="nav__item"><a href="https://sprout.link/ieee.ias?fbclid=PAY2xjawIjmlNleHRuA2FlbQIxMQABpkN8yLN-4_RB-1SFIsFxsbdKuNetvw3fdQajp0Wwd-VMSQ6W-7CbE_bvBw_aem_Zv8dICEQwqRamSUVAVfl2w" class="nav__link">opportunities</a></li>
                         <li class="nav__item dropdown">
                             <a href="#services" class="nav__link">Articles ▾</a>
                             <ul class="dropdown-menu">
